--- a/cucumber-reports/odp_changes/branch/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/odp_changes/branch/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>29 Nov 2021, 08:43</td>
+      <td>29 Nov 2021, 08:49</td>
     </tr>
   </tbody>
 </table>
@@ -116,138 +116,138 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="2029579079">2.029</td>
-              <td class="duration" data-value="2029579079">2.029</td>
-              <td class="duration" data-value="2029579079">2.029</td>
+              <td class="duration" data-value="1728562905">1.728</td>
+              <td class="duration" data-value="1728562905">1.728</td>
+              <td class="duration" data-value="1728562905">1.728</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="137175160">0.137</td>
-              <td class="duration" data-value="137175160">0.137</td>
-              <td class="duration" data-value="137175160">0.137</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="191678">0.000</td>
+              <td class="duration" data-value="191678">0.000</td>
+              <td class="duration" data-value="191678">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="156230460">0.156</td>
-              <td class="duration" data-value="156230460">0.156</td>
-              <td class="duration" data-value="156230460">0.156</td>
+              <td class="duration" data-value="162801291">0.162</td>
+              <td class="duration" data-value="162801291">0.162</td>
+              <td class="duration" data-value="162801291">0.162</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="680996920">0.680</td>
-              <td class="duration" data-value="680996920">0.680</td>
-              <td class="duration" data-value="680996920">0.680</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="152711">0.000</td>
+              <td class="duration" data-value="152711">0.000</td>
+              <td class="duration" data-value="152711">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="5813226051">5.813</td>
-              <td class="duration" data-value="5813226051">5.813</td>
-              <td class="duration" data-value="5813226051">5.813</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="103910688488">1:43.910</td>
+              <td class="duration" data-value="103910688488">1:43.910</td>
+              <td class="duration" data-value="103910688488">1:43.910</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="14598163743">14.598</td>
-              <td class="duration" data-value="14598163743">14.598</td>
-              <td class="duration" data-value="14598163743">14.598</td>
+              <td class="duration" data-value="14703866196">14.703</td>
+              <td class="duration" data-value="14703866196">14.703</td>
+              <td class="duration" data-value="14703866196">14.703</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="853239310">0.853</td>
-              <td class="duration" data-value="853239310">0.853</td>
-              <td class="duration" data-value="853239310">0.853</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="162762">0.000</td>
+              <td class="duration" data-value="162762">0.000</td>
+              <td class="duration" data-value="162762">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2353360630">2.353</td>
-              <td class="duration" data-value="2353360630">2.353</td>
-              <td class="duration" data-value="2353360630">2.353</td>
+              <td class="duration" data-value="2350929404">2.350</td>
+              <td class="duration" data-value="2350929404">2.350</td>
+              <td class="duration" data-value="2350929404">2.350</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3776140927">3.776</td>
-              <td class="duration" data-value="3776140927">3.776</td>
-              <td class="duration" data-value="3776140927">3.776</td>
+              <td class="duration" data-value="3783990332">3.783</td>
+              <td class="duration" data-value="3783990332">3.783</td>
+              <td class="duration" data-value="3783990332">3.783</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="440487302">0.440</td>
-              <td class="duration" data-value="440487302">0.440</td>
-              <td class="duration" data-value="440487302">0.440</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="172886">0.000</td>
+              <td class="duration" data-value="172886">0.000</td>
+              <td class="duration" data-value="172886">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="3175103426">3.175</td>
-              <td class="duration" data-value="3175103426">3.175</td>
-              <td class="duration" data-value="3175103426">3.175</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="230516">0.000</td>
+              <td class="duration" data-value="230516">0.000</td>
+              <td class="duration" data-value="230516">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3576890507">3.576</td>
-              <td class="duration" data-value="3576890507">3.576</td>
-              <td class="duration" data-value="3576890507">3.576</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="176598">0.000</td>
+              <td class="duration" data-value="176598">0.000</td>
+              <td class="duration" data-value="176598">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="214908454">0.214</td>
-              <td class="duration" data-value="214908454">0.214</td>
-              <td class="duration" data-value="214908454">0.214</td>
+              <td class="duration" data-value="212627987">0.212</td>
+              <td class="duration" data-value="212627987">0.212</td>
+              <td class="duration" data-value="212627987">0.212</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="201062133">0.201</td>
-              <td class="duration" data-value="201062133">0.201</td>
-              <td class="duration" data-value="201062133">0.201</td>
+              <td class="duration" data-value="202790514">0.202</td>
+              <td class="duration" data-value="202790514">0.202</td>
+              <td class="duration" data-value="202790514">0.202</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="27461693">0.027</td>
-              <td class="duration" data-value="27461693">0.027</td>
-              <td class="duration" data-value="27461693">0.027</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="157787">0.000</td>
+              <td class="duration" data-value="157787">0.000</td>
+              <td class="duration" data-value="157787">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="8460578">0.008</td>
-              <td class="duration" data-value="8460578">0.008</td>
-              <td class="duration" data-value="8460578">0.008</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="166789">0.000</td>
+              <td class="duration" data-value="166789">0.000</td>
+              <td class="duration" data-value="166789">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="39735463689">39.735</td>
-              <td class="duration" data-value="39735463689">39.735</td>
-              <td class="duration" data-value="39735463689">39.735</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="184034">0.000</td>
+              <td class="duration" data-value="184034">0.000</td>
+              <td class="duration" data-value="184034">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
         </tbody>
 
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">4.575</td>
-            <td class="duration">39.735</td>
-            <td class="duration">1:17.777</td>
+            <td class="duration">7.473</td>
+            <td class="duration">1:43.910</td>
+            <td class="duration">2:7.057</td>
             <td>Totals</td>
           </tr>
         </tfoot>
