--- a/cucumber-reports/odp_changes/branch/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/odp_changes/branch/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>29 Nov 2021, 08:49</td>
+      <td>01 Dec 2021, 11:49</td>
     </tr>
   </tbody>
 </table>
@@ -116,138 +116,138 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="1728562905">1.728</td>
-              <td class="duration" data-value="1728562905">1.728</td>
-              <td class="duration" data-value="1728562905">1.728</td>
+              <td class="duration" data-value="1968531973">1.968</td>
+              <td class="duration" data-value="1968531973">1.968</td>
+              <td class="duration" data-value="1968531973">1.968</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="191678">0.000</td>
-              <td class="duration" data-value="191678">0.000</td>
-              <td class="duration" data-value="191678">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="116766121">0.116</td>
+              <td class="duration" data-value="116766121">0.116</td>
+              <td class="duration" data-value="116766121">0.116</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="162801291">0.162</td>
-              <td class="duration" data-value="162801291">0.162</td>
-              <td class="duration" data-value="162801291">0.162</td>
+              <td class="duration" data-value="158730486">0.158</td>
+              <td class="duration" data-value="158730486">0.158</td>
+              <td class="duration" data-value="158730486">0.158</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="152711">0.000</td>
-              <td class="duration" data-value="152711">0.000</td>
-              <td class="duration" data-value="152711">0.000</td>
+              <td class="duration" data-value="188323">0.000</td>
+              <td class="duration" data-value="188323">0.000</td>
+              <td class="duration" data-value="188323">0.000</td>
               <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="103910688488">1:43.910</td>
-              <td class="duration" data-value="103910688488">1:43.910</td>
-              <td class="duration" data-value="103910688488">1:43.910</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="5422848249">5.422</td>
+              <td class="duration" data-value="5422848249">5.422</td>
+              <td class="duration" data-value="5422848249">5.422</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="14703866196">14.703</td>
-              <td class="duration" data-value="14703866196">14.703</td>
-              <td class="duration" data-value="14703866196">14.703</td>
+              <td class="duration" data-value="14135011962">14.135</td>
+              <td class="duration" data-value="14135011962">14.135</td>
+              <td class="duration" data-value="14135011962">14.135</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="162762">0.000</td>
-              <td class="duration" data-value="162762">0.000</td>
-              <td class="duration" data-value="162762">0.000</td>
+              <td class="duration" data-value="518666895">0.518</td>
+              <td class="duration" data-value="518666895">0.518</td>
+              <td class="duration" data-value="518666895">0.518</td>
               <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2350929404">2.350</td>
-              <td class="duration" data-value="2350929404">2.350</td>
-              <td class="duration" data-value="2350929404">2.350</td>
+              <td class="duration" data-value="2350003984">2.350</td>
+              <td class="duration" data-value="2350003984">2.350</td>
+              <td class="duration" data-value="2350003984">2.350</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3783990332">3.783</td>
-              <td class="duration" data-value="3783990332">3.783</td>
-              <td class="duration" data-value="3783990332">3.783</td>
+              <td class="duration" data-value="3863213642">3.863</td>
+              <td class="duration" data-value="3863213642">3.863</td>
+              <td class="duration" data-value="3863213642">3.863</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="172886">0.000</td>
-              <td class="duration" data-value="172886">0.000</td>
-              <td class="duration" data-value="172886">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="425888330">0.425</td>
+              <td class="duration" data-value="425888330">0.425</td>
+              <td class="duration" data-value="425888330">0.425</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="230516">0.000</td>
-              <td class="duration" data-value="230516">0.000</td>
-              <td class="duration" data-value="230516">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="3281316233">3.281</td>
+              <td class="duration" data-value="3281316233">3.281</td>
+              <td class="duration" data-value="3281316233">3.281</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="176598">0.000</td>
-              <td class="duration" data-value="176598">0.000</td>
-              <td class="duration" data-value="176598">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="3543438399">3.543</td>
+              <td class="duration" data-value="3543438399">3.543</td>
+              <td class="duration" data-value="3543438399">3.543</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="212627987">0.212</td>
-              <td class="duration" data-value="212627987">0.212</td>
-              <td class="duration" data-value="212627987">0.212</td>
+              <td class="duration" data-value="209679421">0.209</td>
+              <td class="duration" data-value="209679421">0.209</td>
+              <td class="duration" data-value="209679421">0.209</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="202790514">0.202</td>
-              <td class="duration" data-value="202790514">0.202</td>
-              <td class="duration" data-value="202790514">0.202</td>
+              <td class="duration" data-value="171010330">0.171</td>
+              <td class="duration" data-value="171010330">0.171</td>
+              <td class="duration" data-value="171010330">0.171</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="157787">0.000</td>
-              <td class="duration" data-value="157787">0.000</td>
-              <td class="duration" data-value="157787">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="28196150">0.028</td>
+              <td class="duration" data-value="28196150">0.028</td>
+              <td class="duration" data-value="28196150">0.028</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="166789">0.000</td>
-              <td class="duration" data-value="166789">0.000</td>
-              <td class="duration" data-value="166789">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="8586106">0.008</td>
+              <td class="duration" data-value="8586106">0.008</td>
+              <td class="duration" data-value="8586106">0.008</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="184034">0.000</td>
-              <td class="duration" data-value="184034">0.000</td>
-              <td class="duration" data-value="184034">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="29684068106">29.684</td>
+              <td class="duration" data-value="29684068106">29.684</td>
+              <td class="duration" data-value="29684068106">29.684</td>
+              <td class="passed">100.00%</td>
             </tr>
         </tbody>
 
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">7.473</td>
-            <td class="duration">1:43.910</td>
-            <td class="duration">2:7.057</td>
+            <td class="duration">3.875</td>
+            <td class="duration">29.684</td>
+            <td class="duration">1:5.886</td>
             <td>Totals</td>
           </tr>
         </tfoot>
